--- a/GL/src/main/res/layout/activity_main.xml
+++ b/GL/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v4.view.ViewPager
+    <vip.gridlife.gridlife.UI.view.MyViewPager
         android:id="@+id/vp_home"
         android:layout_width="match_parent"
         android:layout_height="0dp"
