--- a/GL/src/main/res/layout/fragement_grid.xml
+++ b/GL/src/main/res/layout/fragement_grid.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
+    <vip.gridlife.gridlife.UI.view.MyRecyclerView
         android:id="@+id/rv_grid"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
