--- a/GL/src/main/res/layout/item_recycler_layout.xml
+++ b/GL/src/main/res/layout/item_recycler_layout.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
     <Button
         android:id="@+id/item_tv"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:padding="2dp"
-        android:background="@color/colorAccent" />
-</LinearLayout>
+        android:layout_centerInParent="true"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:padding="2dp" />
+</RelativeLayout>
